--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "styled-components": "^5"
   },
   "devDependencies": {
-    "@iconify/react": "^5.0.2"
+    "@iconify/react": "^5.0.2",
+    "sass": "^1.81.0"
   }
 }
