--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^5.0.2",
-    "sass": "^1.81.0"
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3"
   }
 }
