--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "boxicons": "^2.1.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
@@ -24,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-toast": "^1.0.3",
     "react-toastify": "^10.0.6",
+    "react-webcam": "^7.2.0",
     "redux": "^5.0.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
