--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "styled-components": "^5"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@iconify/react": "^5.0.2",
     "sass": "^1.81.0",
-    "sass-loader": "^16.0.3"
+    "sass-loader": "^16.0.3",
+    "webpack-dev-server": "^5.1.0"
   }
 }
