--- a/package.json
+++ b/package.json
@@ -33,15 +33,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "plugin:storybook/recommended"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -61,21 +58,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@chromatic-com/storybook": "^3.2.2",
     "@iconify/react": "^5.0.2",
-    "@storybook/addon-essentials": "^8.4.6",
-    "@storybook/addon-interactions": "^8.4.6",
-    "@storybook/addon-onboarding": "^8.4.6",
-    "@storybook/blocks": "^8.4.6",
-    "@storybook/preset-create-react-app": "^8.4.6",
-    "@storybook/react": "^8.4.6",
-    "@storybook/react-webpack5": "^8.4.6",
-    "@storybook/test": "^8.4.6",
-    "eslint-plugin-storybook": "^0.11.1",
     "prop-types": "^15.8.1",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
-    "storybook": "^8.4.6",
     "webpack": "^5.96.1",
     "webpack-dev-server": "^5.1.0"
   }
