--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toast": "^1.0.3",
     "react-toastify": "^10.0.6",
     "react-webcam": "^7.2.0",
