--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "bootstrap-icons": "^1.11.3",
     "chartist": "^1.3.0",
     "formik": "^2.4.6",
+    "i18next": "^22.0.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^3.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-i18next": "^12.0.0",
     "react-icons": "^5.3.0",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
@@ -64,7 +68,6 @@
     "prop-types": "^15.8.1",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
-    "webpack": "^5.96.1",
     "webpack-dev-server": "^5.1.0"
   }
 }
