--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chartist": "^1.3.0",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "i18next": "^22.0.0",
     "i18next-browser-languagedetector": "^8.0.0",
