--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "eslint './src/**/*.{js,jsx,ts,tsx}'",
     "lint-fix": "eslint --fix './src/**/*.{js,jsx,ts,tsx}'",
@@ -79,6 +79,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.10",
     "prop-types": "^15.8.1",
+    "react-app-rewired": "^2.2.1",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
     "webpack-dev-server": "^5.1.0"
